# tink

cc/: BUILD.bazel
cc/aead/: BUILD.bazel
cc/daead/: BUILD.bazel
cc/hybrid/: BUILD.bazel
cc/mac/: BUILD.bazel
cc/proto/: BUILD.bazel
cc/signature/: BUILD.bazel
cc/util/: BUILD.bazel
docs/: OBJC-HOWTO.md
objc/: BUILD.bazel
objc/Tests/Host/: AppDelegate.m  main.m
objc/Tests/UnitTests/aead/: TINKAeadFactoryTest.mm
objc/Tests/UnitTests/daead/: TINKDeterministicAeadFactoryTest.mm
objc/Tests/UnitTests/mac/: TINKMacFactoryTest.mm
objc/aead/: TINKAeadFactory.mm  TINKAeadInternal.mm
objc/core/: TINKBinaryKeysetReader.mm  TINKJSONKeysetReader.mm  TINKKeysetHandle+Cleartext.mm  TINKKeysetHandle.mm
objc/daead/: TINKDeterministicAeadFactory.mm  TINKDeterministicAeadInternal.mm
objc/hybrid/: TINKHybridDecryptFactory.mm  TINKHybridDecryptInternal.mm  TINKHybridEncryptFactory.mm  TINKHybridEncryptInternal.h  TINKHybridEncryptInternal.mm
objc/mac/: TINKMacFactory.mm  TINKMacInternal.mm
objc/signature/: TINKPublicKeySignFactory.mm  TINKPublicKeySignInternal.mm  TINKPublicKeyVerifyFactory.mm
objc/util/: BUILD.bazel
