package(default_visibility = ["@tink_base//tools/build_defs:internal_pkg"])

licenses(["notice"])

objc_library(
    name = "errors",
    srcs = ["TINKErrors.mm"],
    hdrs = ["TINKErrors.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@tink_cc//util:status",
        "@com_google_absl//absl/status",
    ],
)

objc_library(
    name = "strings",
    srcs = ["TINKStrings.mm"],
    hdrs = ["TINKStrings.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":errors",
        "@tink_cc//util:status",
        "@com_google_absl//absl/strings",
    ],
)

objc_library(
    name = "test_helpers",
    testonly = 1,
    srcs = ["TINKTestHelpers.mm"],
    hdrs = ["TINKTestHelpers.h"],
    deps = [
        ":errors",
        ":strings",
        "@tink_cc//subtle:subtle_util_boringssl",
        "@tink_cc//proto:all_objc_proto",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//:objectivec",
    ],
)

objc_library(
    name = "proto_helpers",
    testonly = 1,
    srcs = ["TINKProtoHelpers.mm"],
    hdrs = ["TINKProtoHelpers.h"],
    deps = [
        ":errors",
        ":strings",
        ":tink_cc_pb",
        "@tink_cc//util:status",
        "@tink_cc//proto:all_objc_proto",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "tink_cc_pb",
    deps = [
        "@tink_cc//proto:tink_cc_proto",
    ],
)
